* allow <s> to strike; update Help for <s> and <strike> (vargenau)
* ~RichTable plugin: enrich syntax for attributes (vargenau)
* more icons for toolbar (vargenau)
* UserPreferences: specific message when only one preference is updated (vargenau)
* renamed class Theme to ~WikiTheme to avoid Gforge name clash (vargenau)
* numeric cells in tables are now right-aligned by default

!! New
* ~PageList supports listtype=ul,ol,dl. dl used by FullTextSearch
* pageable textsearch results
* external search button by using Search: and searchtype=external
* added ~UniversalWikiEditButton to ~MonoBook, default, blog. More themes later.
* add INSECURE_ACTIONS_LOCALHOST_ONLY for advanced security actions
* enable "^A or ^B" pages argument for ~PageLists: e.g. splitted actions for large htmldump's
* dba: add args to check and rebuild (full or links only)
* RecentChanges: add category, pagematch arguments
* add UriResolver needed for external rdf access
* AppendText: support pages argument: append to multiple pages
* new pages: SpecialPages, LockedPages (vargenau)
* implemented Mediawiki-like syntax for tables (vargenau)
* enable ~RecentChangesCached as box, improve performance.
* implemented Wikicreole 1.0 syntax, including additions (vargenau)
* implemented simple [[Help:Spreadsheet|spreadsheet]] functions for Wikicreole tables (vargenau)
* new plugin: [[Help:CurrentTimePlugin|CurrentTime]] (vargenau)
* new plugin: [[Help:ChartPlugin|Chart]] (vargenau)

!!! 1.3.14 July, 1 2007, Reini Urban

!! Fixes
* Fix the broken LDAP fix from 1.3.13p1
* fixed sortby with multiple pagelists

!! Changes
* changes all themeinfo.php files, moved global to method load() to be
  easier derived from custom theme classes, main now calls $~WikiTheme->load
* ~MailNotify is now silent unless DEBUG

!! New
* added experimental ATOM support
* added Changes and Upload button to edit

!!! 1.3.13p1 June, 9 2007, Reini Urban

An immediate security fix for 1.3.13, plus some minor fixes.

!! Fixes